2009-01-06  Badlop  <badlop@process-one.net>

	* src/msgs/ru.po: Fix typo (thanks to Dominges)
	* src/msgs/ru.msg: Likewise

2009-01-05  Alexey Shchepin  <alexey@process-one.net>

	* src/tls/tls_drv.c: Added a flag to avoid certificate validation
	* src/tls/tls.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise

2009-01-03  Badlop  <badlop@process-one.net>

	* src/*.erl: Fix EDoc comments

2009-01-03  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: deliver notification depending on
	presence-based-delivery configuration (EJAB-827). notification code
	rewrite.

	* src/mod_pubsub/mod_pubsub.erl: code cleanning, minor bugfixes
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/pubsub.hrl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: prevent subscribing with full jid,
	waiting for full jid support (EJAB-701)

	* src/mod_pubsub/mod_pubsub.erl: use of delete-any feature instead of
	delete-nodes for delete item use case (fix from erroneous definition
	in XEP-0060)

	* src/mod_pubsub/mod_pubsub.erl: Added "access-whitelist" and
	"member-affiliation" features (thanks to Andy Skelton)(EJAB-780)

2008-12-29  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_c2s.erl: Bugfix in "from" attribute checking

2008-12-29  Evgeniy Khramtsov <ekhramtsov@process-one.net>

	* src/odbc/ejabberd_odbc.erl: Print meaningful error message when
	an SQL transaction exceeds number of restarts. Also rollbacks
	this transaction to prevent deadlocks.

	* src/odbc/odbc_queries.erl: replaced string:join/2 function.
	Removed ugly "catch" statement from update_t/4.
	WARNING: this change requires last version of mysql driver.
	You can update it from ejabberd-modules repository.

2008-12-28  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: We should allow use of bare resource in from by
	the client (partially revert r1727) (EJAB-812).

2008-12-26  Badlop  <badlop@process-one.net>
