@@ -723,7 +723,7 @@ list_shared_roster_groups(Host, Query, Lang) ->
 		       ]
 		      )]
 		 )]),
-    [?XC("h1", ?T("Shared Roster Groups"))] ++
+    ?H1GL(?T("Shared Roster Groups"), "modsharedroster", "mod_shared_roster") ++
 	case Res of
 	    ok -> [?CT("Submitted"), ?P];
 	    error -> [?CT("Bad format"), ?P];
@@ -822,7 +822,7 @@ shared_roster_group(Host, Group, Query, Lang) ->
 		       ]
 		      )]
 		 )]),
-    [?XC("h1", ?T("Shared Roster Groups"))] ++
+    ?H1GL(?T("Shared Roster Groups"), "modsharedroster", "mod_shared_roster") ++
 	[?XC("h2", ?T("Group ") ++ Group)] ++
 	case Res of
 	    ok -> [?CT("Submitted"), ?P];
