@@ -1,3 +1,13 @@
+2009-01-07  Badlop  <badlop@process-one.net>
+
+	* src/web/ejabberd_web_admin.erl: WebAdmin serves Guide and links
+	to related sections; the path to guide.html can be configured with
+	option doc_path (EJAB-837)
+	* src/web/ejabberd_web_admin.hrl: Likewise
+	* src/mod_shared_roster.erl: Likewise
+	* doc/guide.tex: Likewise
+	* doc/guide.html: Likewise
+
 2009-01-06  Badlop  <badlop@process-one.net>
 
 	* src/msgs/ru.po: Fix typo (thanks to Dominges)
